# php-tester

./: .travis.yml  CMakeLists.txt  README.md  meson.build
data/: CMakeLists.txt  com.github.bartzaalberg.php-tester.appdata.xml  com.github.bartzaalberg.php-tester.appdata.xml.in  com.github.bartzaalberg.php-tester.desktop  com.github.bartzaalberg.php-tester.desktop.in  com.github.bartzaalberg.php-tester.gschema.xml  meson.build
debian/: changelog  control
po/: POTFILES  com.github.bartzaalberg.php-tester.pot  fr.po  nl.po  pt_BR.mo  pt_BR.po
po/extra/: POTFILES  extra.pot  fr.po  nl.po
snap/: com.github.bartzaalberg.php-tester.desktop  snapcraft.yaml
snap/gui/: com.github.bartzaalberg.php-tester.desktop  php-tester.desktop
src/: Application.vala  Constants.vala  FileManager.vala  FileWriter.vala  ListManager.vala  MainWindow.vala  PhpVersionManager.vala  SourceViewManager.vala  StackManager.vala
src/Components/: HeaderBar.vala  HeaderLabel.vala
src/Dialogs/: Alert.vala  Cheatsheet.vala  Preferences.vala
src/Views/: NoPhpFoundView.vala  StandardView.vala
